# WAren6

./: .gitignore  LLM.txt  README.md  SQLITE_WRITE_AUDIT.txt  WAren6-Reader-latest.json  fieldkit-version.json  latest.json  requirements-lock.txt  version.json  waren6.ps1  waren6.py  waren6_unify_case.py
.github/workflows/: field-kit-release.yml  reader-ci.yml  reader-release.yml
airgap/: README.md  __init__.py  build-airgap-package.ps1  build_airgap_package.py  dependency-notices.md  install-offline-deps.ps1  prepare-wheels.ps1
docs/kb/: AI_KB_RULES.md  Architecture.md  Deprecation-log.md  Home.md  Mistakes-not-to-repeat.md  NOTES.md
tests/: test_airgap_package.py  test_github_actions_release.py  test_privacy_hygiene.py  test_waren6_field_transfer_ps1.py  test_waren6_hybrid_media.py  test_waren6_opaque.py  test_waren6_output_profile.py  test_waren6_reports.py  test_waren6_runtime_ps1.py  test_waren6_runtime_validation.py  test_workspace_hygiene.py
tools/: __init__.py  bootstrap.ps1  wa_live_runtime_capture.js  workspace_hygiene.py
waren6-reader/: README.md  package-lock.json  package.json
waren6-reader/scripts/: check-release-version.mjs
waren6-reader/src/: index.html  main.js  member-search.js  message-calls.js  message-chats.js  message-classification.js  message-contacts.js  message-edits.js  message-formatting.js  message-info.js  message-media.js  message-participants.js  message-placeholders.js  (+10 more)
waren6-reader/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
waren6-reader/src-tauri/icons/: icon.icns
waren6-reader/src-tauri/src/: lib.rs  main.rs
(+27 files in other folders)
