[package]
name = "waren6-reader"
version = "1.7.0"
description = "WAren6 Reader WhatsApp forensic viewer"
authors = ["MayukXT"]
edition = "2021"

[lib]
name = "waren6_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
base64 = "0.22.1"
tauri-plugin-dialog = "2.7.1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
